--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   z-index: -1;
 }
 
+
 #firstName {
    padding: 1.5em;
 }
@@ -28,4 +29,22 @@
 }
 #password {
   padding: 1.5em;
+}
+#userName {
+  padding: 1.5em;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    border: 1px solid green;
+    -webkit-text-fill-color: black;
+    box-shadow: 0 0 0px 1000px transparent;
+    transition: background-color 5000s ease-in-out 0s;
 }
