--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,16 @@ select:-webkit-autofill:focus {
     box-shadow: 0 0 0px 1000px transparent;
     transition: background-color 5000s ease-in-out 0s;
 }
+
+#register {
+    margin-top: 0px;
+    color: blue;
+}
+
+#register:hover {
+    cursor: pointer;
+}
+
+u {
+  color: blue;
+}
