--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -1,7 +1,7 @@
 .menu {
     display: flex;
     padding-right: 1.5em;
-    margin-top: 1em;
+    margin-top: 1.5em;
   
     .icon {
       margin-right: 1.5em;
@@ -14,6 +14,7 @@
     }
   
     .profileIcon {
-      margin-top: -3px;
+      margin-top: 4.5px;
+      margin-left: 5px;
     }
   }
