--- a/src/styles/profileIcon.scss
+++ b/src/styles/profileIcon.scss
@@ -1,7 +1,9 @@
 @import "../styles/properties.scss";
 
 .storyBorder {
-  padding: 2px;
+  margin-top: -0.3em;
+  height: 35px;
+  width: 35px;
   background: linear-gradient(
     200deg,
     $gradient-one 25%,
@@ -10,11 +12,12 @@
     $gradient-four 100%
   );
   border-radius: 50%;
+  box-sizing: border-box;
 }
 
 .profileIcon {
   border-radius: 50%;
-  border: 2px solid $background-white;
+  border-color: 2px solid $background-white;
   display: block;
 
   &:hover {
