--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,14 +10,15 @@ body {
 }
 
 main {
-  background: linear-gradient(89deg, #FF5EDF 20%, #04C8DE 100%);
+  // background: linear-gradient(89deg, #FF5EDF 20%, #04C8DE 100%);
   margin-top: 60px;
 
   .container {
     display: flex;
     justify-content: left;
-    margin: 0 auto;
     max-width: 1000px;
+    margin-top: 4.5em;
+    margin-left: 27em;
   }
 }
 
