--- a/src/styles/Cards.scss
+++ b/src/styles/Cards.scss
@@ -1,5 +1,7 @@
 .cards {
     width: 600px;
+    justify-content: center;
+    align-content: center;
   }
   
 @media only screen and (max-width: 600px) {
