--- a/src/styles/properties.scss
+++ b/src/styles/properties.scss
@@ -10,6 +10,6 @@ $font-color-secondary: #8e8e8e;
 $font-color-footer: #c7c7c7;
 $border-color-grey: #dbdbdb;
 $border-color-grey-secondary: #efefef;
-$link-color: #0095f6;
+$link-color: #e03c67;
 $link-color-secondary: #b3dffc;
 $font: "Montserrat", sans-serif;
