--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,9 +1,10 @@
 .sidebar {
-    width: 320px;
+    width: 1000px;
     padding: 7em 2em 0 2em;
+    margin-left: 500px;
   }
   
-  @media only screen and (max-width: 1024px) {
+  @media only screen and (max-width: 1000px) {
     .sidebar {
       display: none;
     }
