--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -5,6 +5,7 @@
   align-items: center;
   font-size: 0.8em;
   margin-bottom: 0.85em;
+  margin-left: 0px;
 
   .textContainer {
     display: flex;
