--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -18,3 +18,10 @@
       margin-left: 5px;
     }
   }
+
+  
+@media only screen and (max-width: 500px) {
+    .menu {
+        margin-top: 0.5em;
+    }
+}
