--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -1,10 +1,12 @@
 .cards {
+  margin-top: 2em;
     width: 600px;
     margin-left: -100px;
   }
   
-  @media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     .cards {
-      width: 100%;
+      width: 250px;
+      margin-left: -500px;
     }
-  }
+}
