--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -8,7 +8,7 @@
 
   header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 0.75em;
 
@@ -18,6 +18,7 @@
 
     .cardButton {
       height: 30px;
+      margin-left: 300px;
 
       &:hover {
         cursor: pointer;
@@ -28,6 +29,10 @@
   .cardImage {
     width: 100%;
     display: block;
+  }
+
+  .timePosted {
+      padding: 1em 1em 1em 1em;
   }
 }
 
@@ -43,6 +48,7 @@
 
     .timePosted {
       border: none;
+      padding: 1em 1em 1em 1em;
     }
   }
 }
