Added extra styling to image cards

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -19,6 +19,7 @@
     .cardButton {
       height: 30px;
       margin-left: 300px;
+      width: auto;
 
       &:hover {
         cursor: pointer;
