--- a/src/styles/profileIcon.scss
+++ b/src/styles/profileIcon.scss
@@ -17,7 +17,7 @@
 
 .profileIcon {
   border-radius: 50%;
-  border-color: 2px solid $background-white;
+  border-color: 2px solid $gradient-two;
   display: block;
 
   &:hover {
