--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -14,8 +14,9 @@
     min-width: 180px;
 
     .accountName {
-      font-weight: 500;
+      font-weight: 700;
       margin-bottom: 5px;
+      margin-right: -300px;
 
       &:hover {
         cursor: pointer;
