--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -23,5 +23,9 @@
 @media only screen and (max-width: 500px) {
     .menu {
         margin-top: 0.5em;
+        .profileIcon {
+            display: none;
+            border: none;
+        }
     }
 }
